--- a/trunk/chrome/content/msh.css
+++ b/trunk/chrome/content/msh.css
@@ -6,11 +6,11 @@
  This program is released "as is" under
  the GNU General Public License V3.
 */
-#capp
+#capppanel
 {
     width: 200px;
 }
-#lapps
+#appspanel
 {
     width: 330px;
 }
